Thu May 10 18:06:58 UTC 2007  Scott Harris  <harris_s@ociweb.com>

        * DDS_no_CORBA.mwc:

          Temporary addition.

        * bin/DCPS/CPPTemplate.pm:
        * bin/DCPS/HTemplate.pm:
        * bin/DCPS/IDLTemplate.pm:
        * bin/dcps_ts.pl:
        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/DataReaderImpl.inl:
        * dds/DCPS/DataWriterImpl.cpp:
        * dds/DCPS/DataWriterImpl.h:
        * dds/DCPS/DomainParticipantFactoryImpl.h:
        * dds/DCPS/DomainParticipantImpl.cpp:
        * dds/DCPS/DomainParticipantImpl.h:
        * dds/DCPS/EntityImpl.h:
        * dds/DCPS/PublisherImpl.cpp:
        * dds/DCPS/PublisherImpl.h:
        * dds/DCPS/Registered_Data_Types.cpp:
        * dds/DCPS/Registered_Data_Types.h:
        * dds/DCPS/Service_Participant.cpp:
        * dds/DCPS/Service_Participant.h:
        * dds/DCPS/SubscriberImpl.cpp:
        * dds/DCPS/SubscriberImpl.h:
        * dds/DCPS/TopicDescriptionImpl.cpp:
        * dds/DCPS/TopicDescriptionImpl.h:
        * dds/DCPS/TopicImpl.cpp:
        * dds/DCPS/TopicImpl.h:
        * dds/DdsDcps.mpc:
        * dds/DdsDcpsDataReaderRemote.idl:
        * dds/DdsDcpsDataWriterRemote.idl:
        * dds/DdsDcpsDomain.idl:
        * dds/DdsDcpsInfrastructure.idl:
        * dds/DdsDcpsPublication.idl:
        * dds/DdsDcpsSubscription.idl:
        * dds/DdsDcpsTopic.idl:
        * dds/DdsDcpsTypeSupportTao.idl:
        * dds/InfoRepo/DomainParticipantListener_i.h:
        * tests/DCPS/ZeroCopyRead/main.cpp:
        
          First round of making the entity interfaces local
          and merging the sample sequence types.
          
          These changes requires changes to the TAO_IDL compiler
          to support the native <Foo>Seq type.
          
			The DDS entities (e.g. DomainParticipant, FooDataReader) have changed from
			*remote* IDL types to *local* IDL types and the data sequence and info sequence