@@ -1,3 +1,12 @@
+Fri May 11 23:36:56 UTC 2007  Scott Harris  <harris_s@ociweb.com>
+
+        * dds/DCPS/DataReaderRemoteImpl.cpp:
+        * dds/DCPS/DataReaderRemoteImpl.h:
+        * dds/DCPS/DataWriterRemoteImpl.cpp:
+        * dds/DCPS/DataWriterRemoteImpl.h:
+
+          Oops - forgot to add these.
+
 Thu May 10 18:06:58 UTC 2007  Scott Harris  <harris_s@ociweb.com>
 
         * DDS_no_CORBA.mwc:
